<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@drawable/mujer_fondo" >
    
    <TableRow android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >        
        
        <Button android:id="@+id/adventure"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/adventure" />
        
        <Button android:id="@+id/recipes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipes" />
    </TableRow>
    
    
    <TableRow android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >        
        
        <Button android:id="@+id/toCook"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toCook" />
        
        <Button android:id="@+id/mixer"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/mixer" />        
    </TableRow>

    
    <TableRow android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >        
        
    	<Button android:id="@+id/chrono"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/chrono" />

    	<Button android:id="@+id/tips"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/tips" />
    </TableRow>

</TableLayout>