<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView android:id="@+id/choiceText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/selectUser" />

    <Spinner
        android:id="@+id/listPlayers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/choiceText" />
	
	<TableRow
	    android:id="@+id/players"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/listPlayers"
	    android:layout_marginTop="@dimen/menu_separation"
	    android:gravity="center" >
    	<Button
    	    android:id="@+id/newPlayer"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="@dimen/space_column"
    	    android:text="@string/newPlayer" />
    	<Button
        	android:id="@+id/deletePlayer"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/deletePlayer" />
    </TableRow>
	
	<Button
	    android:id="@+id/summit"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/players"
	    android:layout_marginTop="@dimen/menu_separation"
	    android:text="@string/summitUser" />
    
</RelativeLayout>