<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView android:id="@+id/questionText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/deleteUserText" />
    
    <TextView android:id="@+id/userName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="32sp"
        android:layout_below="@id/questionText" />

    <TableRow
	    android:id="@+id/players"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_below="@id/userName"
	    android:layout_marginTop="@dimen/menu_separation"
	    android:gravity="center" >
    	<Button
    	    android:id="@+id/deleteYes"
    	    android:layout_width="wrap_content"
    	    android:layout_height="wrap_content"
    	    android:layout_marginRight="@dimen/space_column"
    	    android:text="@string/yesText" />
    	<Button
        	android:id="@+id/deleteNo"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/noText" />
    </TableRow>
    
</RelativeLayout>